--- a/example_2/index.html
+++ b/example_2/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Restoran</title>
+	<title>Restaurant</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Sintony:400,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -65,7 +65,7 @@
 							<p class="title__desc">
 								from 
 								<span>
-									luxury restaurent.
+									luxury restaurant.
 								</span>
 							</p>
 						</div>
@@ -96,7 +96,7 @@
 			<div class="row">
 				<div class="col-lg-6">
 					<div class="history">
-						<h2 class="history__title">About Restaurent</h2>
+						<h2 class="history__title">About restaurant</h2>
 						<p class="history__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged... </p>
 						<a href="#" class="cta history__button">READ MORE</a>
 					</div>
@@ -148,7 +148,7 @@
 				<div class="col-lg-6">
 					<div class="food">
 						<img src="img/dish.jpg" alt="Dish_1" class="food__img img-fluid">
-						<h3 class="food__title">Food Name one</h3>
+						<h3 class="food__title">Food Name two</h3>
 						<p class="food__des">printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.</p>
 						<div class="food__detales d-flex">
 							<div class="food__del">
@@ -160,7 +160,7 @@
 							<div class="food__phone">1-008 005 006</div>
 							<div class="food__price yellow ml-auto">
 								<sup><small>$</small></sup>
-							89.00</div>
+							92.00</div>
 						</div>
 					</div>
 				</div>
